--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 			<div class="first-back">
 			<div class="second-back">
 
-				<img src="../image-qr-code.png" alt="QR Code" width="300px">
+				<img src="image-qr-code.png" alt="QR Code" width="300px">
 				<p class="first-p">Improve your front-end skills, by building projects</p>
 				<p class="second-p">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
 
