--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 		<title>QR Code</title>
 		<link href="QR.css" rel="stylesheet">
 
-
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=DynaPuff&family=PT+Sans+Narrow&display=swap" rel="stylesheet">
 
 	</head>
 	<body>
