--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html>
+<html lang="en">
 	<head>
 		<meta charset="UTF-8">
 		<meta name="description" content="This is the QR challenge!">
@@ -13,16 +13,14 @@
 
 	</head>
 	<body>
-		<center>
-			<div class="first-back">
-			<div class="second-back">
+		<div class="first-back">
+		<div class="second-back">
 
-				<img src="image-qr-code.png" alt="QR Code" width="300px">
-				<p class="first-p">Improve your front-end skills, by building projects</p>
-				<p class="second-p">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+			<img src="image-qr-code.png" alt="QR Code" width="300px">
+			<h1 class="first-p">Improve your front-end skills, by building projects</h1>
+			<p class="second-p">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
 
-			</div>
-			</div>
-		</center>
+		</div>
+		</div>
 	</body>
 </html>
