--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>QR Code</title>
 		<link href="QR.css" rel="stylesheet">
-
+		<link href="favicon-32x32.png" rel="icon">
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=DynaPuff&family=PT+Sans+Narrow&display=swap" rel="stylesheet">
@@ -14,13 +14,15 @@
 	</head>
 	<body>
 		<div class="first-back">
-		<div class="second-back">
+			<div class="second-back">
 
-			<img src="image-qr-code.png" alt="QR Code" width="300px">
-			<h1 class="first-p">Improve your front-end skills, by building projects</h1>
-			<p class="second-p">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
-
-		</div>
+				<img src="image-qr-code.png" alt="QR Code" width="300px">
+				<h1 class="first-p">Improve your front-end skills, by building projects</h1>
+				<p class="second-p">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+			</div>
+			<footer>
+				<p>A challenge by <a href="https://www.frontendmentor.io/challenges/qr-code-component-iux_sIO_H" target="_blank">Frontend Mentor</a>.</p>
+			</footer>
 		</div>
 	</body>
 </html>
