--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 
 	</head>
 	<body>
-		<div class="first-back">
-			<div class="second-back">
+		<div class="first-bg">
+			<div class="second-bg">
 
 				<img src="image-qr-code.png" alt="QR Code" width="300px">
-				<h1 class="first-p">Improve your front-end skills, by building projects</h1>
+				<p class="first-p">Improve your front-end skills, by building projects</p>
 				<p class="second-p">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
 			</div>
 			<footer>
